2025-05-21T01:22:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15151351803 # 650
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-21
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 995 1475 / 1008 1488
* notice: next accum: outdated-unq outdated-all / unq all: 996 1476 / 1008 1488
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-07] / []

2025-05-20T01:23:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15126710835 # 649
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-20
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 994 1474 / 1007 1487
* notice: next accum: outdated-unq outdated-all / unq all: 995 1475 / 1008 1488
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-06] / [2025-05-19]

2025-05-19T01:25:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15102248521 # 648
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-19
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 993 1473 / 1006 1486
* notice: next accum: outdated-unq outdated-all / unq all: 994 1474 / 1007 1487
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-05] / [2025-05-18]

2025-05-18T01:27:11Z: