@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-21T01:22:48Z",
-  "count_outdated" : 1476,
-  "uniques_outdated" : 996,
-  "count" : 1488,
-  "uniques" : 1008,
+  "timestamp" : "2025-05-22T01:21:58Z",
+  "count_outdated" : 1477,
+  "uniques_outdated" : 997,
+  "count" : 1489,
+  "uniques" : 1009,
   "clones" : [
-    {
-      "timestamp": "2025-05-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-09T00:00:00Z",
       "count": 1,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2025-05-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
