@@ -1,3 +1,12 @@
+2025-05-22T01:21:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15175943771 # 651
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-22
+* notice: last 14d: unq all: 3 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 996 1476 / 1008 1488
+* notice: next accum: outdated-unq outdated-all / unq all: 997 1477 / 1009 1489
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-05-08] / [2025-05-21]
+
 2025-05-21T01:22:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15151351803 # 650
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-21
